Add back-to-top button
Changed JavaScript to JQuery

--- a/assets/scss/_myBtn.scss
+++ b/assets/scss/_myBtn.scss
@@ -5,16 +5,16 @@
   bottom: 50px;
   right: 20px;
   z-index: 99;
-  font-size: 18px;
+  font-size: 1rem;
   border: none;
   outline: none;
   background-color: #b7a48e;
   color: white;
   cursor: pointer;
-  padding: 15px;
-}
+  padding: 14px 20px;
 
-.myBtn:hover {
-  background-color: #a1886b;
+  &:hover {
+    background-color: #a1886b;
+  }
 }
 /* END: botton-to-top */
