--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -95,13 +95,13 @@ p {
   bottom: 50px;
   right: 20px;
   z-index: 99;
-  font-size: 18px;
+  font-size: 1rem;
   border: none;
   outline: none;
   background-color: #b7a48e;
   color: white;
   cursor: pointer;
-  padding: 15px;
+  padding: 14px 20px;
 }
 
 .myBtn:hover {
