Add responsive design

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -167,6 +167,10 @@ p {
   vertical-align: -1px;
 }
 
+.icon_burger i {
+  display: none;
+}
+
 /* 1 SECTION END: NAVIGATION MENIU */
 /* 2 SECTION START: CAROUSEL */
 /*https://owlcarousel2.github.io/OwlCarousel2/docs/started-installation.html*/
@@ -197,12 +201,13 @@ p {
 .special-container {
   max-width: 1186px;
   margin: 0 auto;
-  height: 612px;
-  /*?????? kaip sitas sprendimas? 715px, 100vh*/
+  margin-left: 39.547px;
+  margin-right: 39.547px;
+  min-height: 100vh;
+  /* kaip sitas sprendimas? 612px; 715px, 100vh*/
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  position: relative;
 }
 
 .special-container.second {
@@ -217,7 +222,7 @@ p {
 }
 
 .second .content {
-  padding-left: 40px;
+  padding-left: 20px;
   max-width: 623px;
 }
 
@@ -251,6 +256,7 @@ p {
   font-size: 1.9rem;
   letter-spacing: 1px;
   padding-top: 25px;
+  padding-bottom: 45px;
 }
 
 .second h4 {
@@ -266,32 +272,14 @@ p {
   text-transform: uppercase;
   font-family: "Karla", Arial, Helvetica, "Nimbus Sans L", sans-serif;
   font-size: 0.6875rem;
-  position: absolute;
   color: #fff;
   font-weight: 700;
   letter-spacing: 4px;
 }
 
-/* button colors: */
-.first a {
-  margin-left: 73px;
-  bottom: 160px;
-}
-
 .first a:hover {
   background: #b8a48d;
   color: #f7f4f0;
-}
-
-.atitraukimas {
-  margin-bottom: 60px;
-}
-
-.second a {
-  -webkit-transform: translateX(-110%);
-  -ms-transform: translateX(-110%);
-  transform: translateX(-110%);
-  bottom: 190px;
 }
 
 .second a:hover {
@@ -304,7 +292,6 @@ p {
 .overlay {
   height: 107px;
   background-color: #f7f3f0;
-  max-width: 1280px;
 }
 
 /* 3 SECTION END: overlay */
@@ -325,6 +312,12 @@ p {
   position: relative;
 }
 
+.content-about-us a:hover, .voucher .container .voucher-content a:hover {
+  border: 1px solid #d8d3d2;
+  background-color: #f7f4f0;
+  color: #2d2a27;
+}
+
 /*centruojam turini: */
 .content-about-us {
   -webkit-box-pack: center;
@@ -339,7 +332,7 @@ p {
   text-align: center;
 }
 
-h1 {
+.content-about-us h1 {
   color: #c0b7af;
   font-size: 1rem;
   text-transform: uppercase;
@@ -350,7 +343,7 @@ h1 {
   line-height: 28px;
 }
 
-h2 {
+.content-about-us h2 {
   color: #2d2a27;
   font-family: "Marcellus", Georgia, Times, "Century Schoolbook L", serif;
   font-style: normal;
@@ -361,26 +354,19 @@ h2 {
   padding-top: 35px;
 }
 
-.about-us p {
+.content-about-us p {
   color: #6a6560;
-  font-size: 0.8rem;
-  /*atrodo per didelis sriftas, visai kitoks. turejo buti 16px, tai sumazinau*/
-  letter-spacing: 3px;
+  font-size: 1rem;
+  letter-spacing: 2px;
   line-height: 28px;
   padding-bottom: 35px;
 }
 
-.about-us .button {
+.content-about-us .button {
   letter-spacing: 2px;
   -webkit-transform: translateX(-50%);
   -ms-transform: translateX(-50%);
   transform: translateX(-50%);
-}
-
-.about-us a:hover, .voucher a:hover {
-  border: 1px solid #d8d3d2;
-  background-color: #f7f4f0;
-  color: #2d2a27;
 }
 
 /* 4 SECTION END: ABOUT US */
@@ -400,11 +386,11 @@ h2 {
   align-items: center;
 }
 
-.antraste {
+.intro-to-service .container .antraste {
   width: 430.844px;
 }
 
-.antraste h4 {
+.intro-to-service .container .antraste h4 {
   color: #2d2a27;
   font-family: "Marcellus", Georgia, Times, "Century Schoolbook L", serif;
   font-style: normal;
@@ -414,16 +400,15 @@ h2 {
   line-height: 34px;
 }
 
-.intro-to-service a {
+.intro-to-service .container a {
   border: 1px solid #e0dddd;
   background-color: rgba(0, 0, 0, 0);
   color: #2d2a27;
   letter-spacing: 2px;
-  font-weight: 700;
   position: static;
 }
 
-.intro-to-service a:hover {
+.intro-to-service .container a:hover {
   color: #fff;
   background-color: #2d2a27;
   border-color: #4a4744;
@@ -436,7 +421,15 @@ h2 {
   /* atemiau 40px, nes nuotraukos i apacia turi 40px margin*/
 }
 
-.spa {
+.paslaugos .container .service-photos {
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+}
+
+.paslaugos .container .service-photos .spa {
   width: 29.8568%;
   margin-bottom: 40px;
   position: relative;
@@ -445,44 +438,7 @@ h2 {
   color: white;
 }
 
-.service-photos {
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
-}
-
-/* ant nuotraukos sucentruojam teksta */
-.centered {
-  position: absolute;
-  width: 100%;
-  /* jejeje tekstas viduj nepersikelia i kita eilute ## /* max-width: 250px; KODEL PEREINA I KITA EILUTE?*/
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-}
-
-.overlayw3 {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  height: 100%;
-  width: 100%;
-  -webkit-transition: .5s ease;
-  -o-transition: .5s ease;
-  transition: .5s ease;
-}
-
-.spa:hover .overlayw3 {
+.paslaugos .container .service-photos .spa:hover .overlayw3 {
   background-color: rgba(45, 42, 39, 0.5);
 }
 
@@ -497,6 +453,33 @@ h2 {
   display: block;
 }
 
+.paslaugos a .centered {
+  position: absolute;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+}
+
+.paslaugos a .overlayw3 {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  -webkit-transition: .5s ease;
+  -o-transition: .5s ease;
+  transition: .5s ease;
+}
+
 /* 6 SECTION END: services */
 /* 7 SECTION START: VOUCHERS*/
 .voucher {
@@ -507,7 +490,8 @@ h2 {
 }
 
 .voucher .container {
-  min-height: 725px;
+  padding-top: 270px;
+  padding-bottom: 270px;
   -webkit-box-pack: end;
   -ms-flex-pack: end;
   justify-content: flex-end;
@@ -516,13 +500,13 @@ h2 {
   align-items: center;
 }
 
-.voucher-content {
+.voucher .container .voucher-content {
   max-width: 400px;
   position: relative;
   text-align: center;
 }
 
-.voucher h3 {
+.voucher .container .voucher-content h3 {
   color: #2d2a27;
   font-family: "Marcellus", Georgia, Times, "Century Schoolbook L", serif;
   font-style: normal;
@@ -532,7 +516,7 @@ h2 {
   font-size: 1.125rem;
 }
 
-.voucher-content h4 {
+.voucher .container .voucher-content h4 {
   color: #c0b7af;
   font-size: 1rem;
   text-transform: uppercase;
@@ -548,7 +532,7 @@ h2 {
   color: #2d2a27;
 }
 
-.voucher .button {
+.voucher .container .voucher-content .button {
   margin-bottom: 240px;
   letter-spacing: 2px;
   -webkit-transform: translateX(-50%);
@@ -558,7 +542,7 @@ h2 {
 
 /* 7 SECTION END: VOUCHERS */
 /* 8 SECTION START: NEWS */
-.top-column .top-right a, .bottom-column footer a, label {
+.top-column .top-right a, .bottom-column footer a, .one_form label {
   font-family: "Karla", Arial, Helvetica, "Nimbus Sans L", sans-serif;
   text-decoration: none;
   background-color: #2d2a27;
@@ -585,7 +569,7 @@ h2 {
   margin-bottom: 55px;
 }
 
-.news .kar2 .owl-stage-outer {
+.news .karusele2 .owl-stage-outer {
   -webkit-transform: translateY(-10px);
   -ms-transform: translateY(-10px);
   transform: translateY(-10px);
@@ -697,33 +681,33 @@ h2 {
 }
 
 /* 8 SECTION END: NEWS */
-/* 9 SECTION START: footer */
+/* 9 SECTION START: FOOTER */
 .end-footer {
   background-color: #1f1e1d;
 }
 
-.footer-content {
+.end-footer .footer-content {
   padding: 120px 20px 25px;
   text-align: center;
 }
 
-.end-footer img {
+.end-footer .footer-content .logo2 {
+  padding: 0;
+  margin: 0 auto;
+  margin-bottom: 50px;
+  max-width: 70px;
+}
+
+.end-footer .footer-content .logo2 img {
   display: inline;
   width: 100%;
 }
 
-.address {
+.end-footer .footer-content .address {
   margin-bottom: 40px;
 }
 
-.end-footer .logo2 {
-  padding: 0;
-  margin: 0 auto;
-  margin-bottom: 50px;
-  width: 7%;
-}
-
-.end-footer h4 {
+.end-footer .footer-content .address h4 {
   color: #c0b7af;
   font-size: 1rem;
   text-transform: uppercase;
@@ -736,7 +720,7 @@ h2 {
   color: rgba(255, 255, 255, 0.4);
 }
 
-.end-footer a {
+.end-footer .footer-content .address a {
   color: #c0b7af;
   font-size: 1rem;
   text-transform: uppercase;
@@ -750,12 +734,20 @@ h2 {
   line-height: 24px;
 }
 
-.icon-social {
-  margin-bottom: 20px;
+.end-footer .footer-content .rights {
+  margin-top: 100px;
 }
 
-.icon-social a {
-  color: #fff;
+.end-footer .footer-content .rights p {
+  text-transform: capitalize;
+  color: rgba(255, 255, 255, 0.4);
+  font-size: 1rem;
+  line-height: 26px;
+  display: inline;
+}
+
+.icon-social {
+  margin-bottom: 20px;
 }
 
 .icon-social ul {
@@ -764,29 +756,27 @@ h2 {
   justify-content: center;
 }
 
-.margin i {
+.icon-social ul a {
+  color: #fff;
+}
+
+.icon-social ul a i {
   margin-right: 20px;
   font-size: 19px;
 }
 
-.icon-social i:hover {
+.icon-social ul a i:hover {
   color: #e7d2b9;
 }
 
-.rights {
-  margin-top: 100px;
-}
-
-.rights p {
-  text-transform: capitalize;
-  color: rgba(255, 255, 255, 0.4);
-  font-size: 1rem;
-  line-height: 26px;
-  display: inline;
-}
-
-/* 9 SECTION END: footer */
+/* 9 SECTION END: FOOTER */
 /* CONTACT US FORM: START */
+.reservation .container .call_to_action, .one_form {
+  padding-bottom: 10px;
+  margin-right: 6px;
+  margin-left: 6px;
+}
+
 .reservation {
   background-color: #f7f4f0;
 }
@@ -799,7 +789,7 @@ h2 {
   justify-content: center;
 }
 
-.reservation h3 {
+.reservation .container h3 {
   color: #c0b7af;
   font-size: 1rem;
   text-transform: uppercase;
@@ -811,7 +801,7 @@ h2 {
   text-align: center;
 }
 
-.reservation h4 {
+.reservation .container h4 {
   color: #2d2a27;
   font-family: "Marcellus", Georgia, Times, "Century Schoolbook L", serif;
   font-style: normal;
@@ -822,13 +812,20 @@ h2 {
   text-align: center;
 }
 
-.call_to_action, .one_form {
-  padding-bottom: 10px;
-  margin-right: 6px;
-  margin-left: 6px;
+.reservation .container .call_to_action {
+  padding-top: 20px;
 }
 
-label {
+.reservation .container .call_to_action input {
+  width: initial;
+}
+
+.reservation .container .call_to_action input:hover {
+  background: #b8a48d;
+  color: #f7f4f0;
+}
+
+.one_form label {
   padding-bottom: 6px;
   font-size: 0.6875rem;
   font-weight: 700;
@@ -836,6 +833,10 @@ label {
   line-height: 16px;
   color: #2d2a27;
   background-color: transparent;
+}
+
+.one_form label span {
+  color: #b8a48d;
 }
 
 select, input, textarea {
@@ -848,21 +849,127 @@ select:focus, input:focus, textarea:focus {
   outline-color: #b8a48d;
 }
 
-.one_form span {
-  color: #b8a48d;
-}
-
-.call_to_action {
-  padding-top: 20px;
-}
-
-.call_to_action input {
-  width: initial;
-}
-
-.call_to_action input:hover {
-  background: #b8a48d;
-  color: #f7f4f0;
-}
-
 /* CONTACT US FORM: END */
+@media screen and (max-width: 600px) {
+  .topnav a {
+    display: none;
+  }
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .topnav.responsive {
+    position: relative;
+  }
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+}
+
+@media all and (max-width: 600px) {
+  .special-container {
+    margin-left: 15px;
+    margin-right: 15px;
+  }
+  .first .content {
+    padding-left: 20px;
+    max-width: 280px;
+  }
+  .second .content {
+    padding-left: 20px;
+    max-width: 300px;
+  }
+  .second .content a {
+    max-width: 30%;
+  }
+  .carousel h3 {
+    font-size: 1rem;
+  }
+  .carousel h4 {
+    font-size: 1.5rem;
+  }
+}
+
+@media all and (max-width: 600px) {
+  .content-about-us {
+    margin-top: 90px;
+    margin-bottom: 110px;
+  }
+}
+
+@media all and (max-width: 1050px) {
+  .intro-to-service .container {
+    margin: 0 20px 0px 20px;
+  }
+}
+
+@media screen and (max-width: 750px) {
+  .intro-to-service .container {
+    padding-top: 60px;
+    padding-bottom: 70px;
+    display: block;
+    margin: 0 20px 0px 20px;
+  }
+  .intro-to-service .container .antraste {
+    padding-bottom: 30px;
+    width: 350px;
+  }
+}
+
+@media all and (max-width: 1050px) {
+  .paslaugos .container {
+    margin: 0 20px 0px 20px;
+  }
+}
+
+@media all and (max-width: 750px) {
+  .paslaugos .container .service-photos .spa {
+    width: 47%;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .paslaugos .container {
+    padding-bottom: 50px;
+    margin: 0 20px 0px 20px;
+  }
+  .paslaugos .container .service-photos .spa {
+    width: 100%;
+    margin-bottom: 0px;
+  }
+}
+
+@media all and (max-width: 1000px) {
+  .voucher .container {
+    padding-top: 230px;
+    padding-bottom: 230px;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+  }
+}
+
+@media all and (max-width: 1050px) {
+  .news .container {
+    margin: 0 20px 0px 20px;
+  }
+  .news .container .one-news-column {
+    width: 100%;
+  }
+}
+
+@media all and (max-width: 600px) {
+  .news .container {
+    padding: 50px 20px;
+  }
+}
