--- a/assets/scss/_carousel.scss
+++ b/assets/scss/_carousel.scss
@@ -11,7 +11,7 @@
 
 /* nuotrauka kazkodel per maza???? */
 .carousel .photo {
-  background-size: cover; // GAL VISOMS TAIP FOTO???
+  background-size: cover;
   background-position: center;
 }
 
@@ -26,9 +26,10 @@
 .special-container {
   max-width: 1186px;
   margin: 0 auto;
-  height: 612px; /*?????? kaip sitas sprendimas? 715px, 100vh*/
+  margin-left: 39.547px;
+  margin-right: 39.547px;
+  min-height: 100vh; /* kaip sitas sprendimas? 612px; 715px, 100vh*/
   align-items: center;
-  position: relative;
 }
 
 .special-container.second{
@@ -41,11 +42,10 @@
 }
 
 .second .content {
-  padding-left: 40px;
+  padding-left: 20px;
   max-width: 623px;
 }
 
-// GAL FONT FAMILY I KINTAMAJI??
 @mixin uppercase-title {
   color: rgb(192, 183, 175);
   font-size: 1rem;
@@ -79,6 +79,7 @@
   font-size: 1.9rem;
   letter-spacing: 1px;
   padding-top: 25px;
+  padding-bottom: 45px;
 }
 
 .second h4 {
@@ -93,31 +94,20 @@
   text-transform: uppercase;
   font-family: $karla;
   font-size: 0.6875rem;
-  position: absolute;
   color: #fff;
   font-weight: 700;
   letter-spacing: 4px;
 }
 
-/* button colors: */
-.first a {
-  margin-left: 73px;
-  bottom: 160px;
-}
 
 .first a:hover {
   background: #b8a48d;
   color: #f7f4f0;
 }
 
-.atitraukimas {
-  margin-bottom: 60px;
-}
-
-.second a {
-  transform: translateX(-110%); // KODEL CIA TIEK REIKEJO PADARYTI??
-  bottom: 190px;
-}
+// .atitraukimas {
+//   margin-bottom: 60px;
+// }
 
 .second a:hover {
   background: #fff;
