--- a/assets/scss/_news.scss
+++ b/assets/scss/_news.scss
@@ -32,7 +32,7 @@
     margin-bottom: 55px;
   }
 
-  .kar2 .owl-stage-outer {
+  .karusele2 .owl-stage-outer {
     transform: translateY(-10px);
   }
 
