--- a/assets/scss/_overlay.scss
+++ b/assets/scss/_overlay.scss
@@ -1,8 +1,8 @@
 /* 3 SECTION START: overlay */
 .overlay {
-  height: 107px; //????? kaip cia
+  height: 107px;
   background-color: #f7f3f0;
-  max-width: 1280px;
+  // max-width: 1280px;
 }
 
 /* 3 SECTION END: overlay */
