--- a/assets/scss/_vouchers.scss
+++ b/assets/scss/_vouchers.scss
@@ -1,51 +1,50 @@
 /* 7 SECTION START: VOUCHERS*/
 
-// GAL SITA BUTU GALIMA SUKURTI KETURIEMS KARTAMS BACKROUND TAISYKLES???
 .voucher {
   background-image: url("../images/gultas-compressor.jpg");
   background-position: center right;
   background-repeat: no-repeat;
   background-size: cover;
-  
-}
 
-.voucher .container {
-  min-height: 725px; // KAIP DARYTI??
-  justify-content: flex-end;
-  align-items: center;
-}
+  .container {
+    padding-top: 270px;
+    padding-bottom: 270px;
+    justify-content: flex-end;
+    align-items: center;
 
-.voucher-content {
-  max-width: 400px;
-  position: relative;
-  text-align: center;
-}
+    .voucher-content {
+      max-width: 400px;
+      position: relative;
+      text-align: center;
 
-.voucher h3 {
-  @include big-title;
-  text-transform: capitalize;
-  color: rgb(106, 101, 96);
-  font-size: 1.125rem;
-}
+      h3 {
+        @include big-title;
+        text-transform: capitalize;
+        color: rgb(106, 101, 96);
+        font-size: 1.125rem;
+      }
 
-.voucher-content h4 {
-  @include uppercase-title;
-  display: inline-block;
-  font-size: 1.75rem;
-  line-height: 44px;
-  padding-top: 30px;
-  padding-bottom: 30px;
-  color: rgb(45, 42, 39);
-}
+      h4 {
+        @include uppercase-title;
+        display: inline-block;
+        font-size: 1.75rem;
+        line-height: 44px;
+        padding-top: 30px;
+        padding-bottom: 30px;
+        color: rgb(45, 42, 39);
+      }
 
-.voucher .button {
-  margin-bottom: 240px;
-  letter-spacing: 2px;
-  transform: translateX(-50%);
-}
+      a:hover {
+        @extend %hover;
+      }
 
-.voucher a:hover {
-  @extend %hover;
+      .button {
+        margin-bottom: 240px;
+        letter-spacing: 2px;
+        transform: translateX(-50%);
+      }
+    }
+  }
 }
 
 /* 7 SECTION END: VOUCHERS */
