--- a/assets/scss/_introToServices.scss
+++ b/assets/scss/_introToServices.scss
@@ -2,38 +2,38 @@
 
 .intro-to-service {
   background-color: #fff;
-}
 
-.intro-to-service .container {
-  padding-top: 125px;
-  padding-bottom: 70px;
-  justify-content: space-between;
-  align-items: center;
-}
+  .container {
+    padding-top: 125px;
+    padding-bottom: 70px;
+    justify-content: space-between;
+    align-items: center;
 
-.antraste {
-  width: 430.844px;
-}
-.antraste h4 {
-  @include big-title;
-  font-size: 1.5rem;
-  text-align: left;
-  line-height: 34px;
-}
+    .antraste {
+      width: 430.844px;
 
-.intro-to-service a {
-  border: 1px solid rgb(224, 221, 221);
-  background-color: rgba(0, 0, 0, 0);
-  color: #2d2a27;
-  letter-spacing: 2px;
-  font-weight: 700;
-  position: static;
-}
+      h4 {
+        @include big-title;
+        font-size: 1.5rem;
+        text-align: left;
+        line-height: 34px;
+      }
+    }
 
-.intro-to-service a:hover{
-  color: #fff;
-  background-color: #2d2a27;
-  border-color: rgb(74, 71, 68);
+    a {
+      border: 1px solid rgb(224, 221, 221);
+      background-color: rgba(0, 0, 0, 0);
+      color: #2d2a27;
+      letter-spacing: 2px;
+      position: static;
+
+      &:hover{
+        color: #fff;
+        background-color: #2d2a27;
+        border-color: rgb(74, 71, 68);
+      }
+    }
+  }
 }
 
 /* 5 SECTION END: intro to services */
