--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -95,7 +95,139 @@ p {
 @import "footer";
 @import "reservation";
 
+// NAVIGATION
 
+@media screen and (max-width: 600px) {
+  .topnav a {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+}
 
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+}
 
+// CAROUSEL SECTION
 
+@media all and (max-width: 600px) {
+  .special-container {
+    margin-left: 15px;
+    margin-right: 15px;
+  }
+
+  .first .content {
+    padding-left: 20px;
+    max-width: 280px;
+  }
+
+  .second .content {
+    padding-left: 20px;
+    max-width: 300px;
+    a {
+      max-width: 30%;
+    }
+  }
+
+  .carousel h3 {
+    font-size: 1rem;
+  }
+  .carousel h4{
+    font-size: 1.5rem;
+  }
+}
+
+// ABOUT US SECTION
+
+@media all and (max-width: 600px) {
+  .content-about-us {
+    margin-top: 90px;
+    margin-bottom: 110px;
+  }
+}
+
+// INTRO TO SERVICE
+
+@media all and (max-width: 1050px) {
+  .intro-to-service .container {
+    margin: 0 20px 0px 20px;
+  }
+}
+
+@media screen and (max-width: 750px) {
+  .intro-to-service .container {
+    padding-top: 60px;
+    padding-bottom: 70px;
+    display: block;
+    margin: 0 20px 0px 20px;
+    .antraste {
+      padding-bottom: 30px;
+      width: 350px;
+    }
+  }
+}
+
+// SERVICE
+
+@media all and (max-width: 1050px) {
+  .paslaugos .container {
+    margin: 0 20px 0px 20px;
+  }
+}
+
+@media all and (max-width: 750px) {
+  .paslaugos .container .service-photos .spa {
+    width: 47%;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .paslaugos .container {
+    padding-bottom: 50px;
+    margin: 0 20px 0px 20px;
+    .service-photos .spa {
+      width: 100%;
+      margin-bottom: 0px;
+    }
+  }
+}
+
+// VOUCHER
+
+@media all and (max-width: 1000px) {
+  .voucher .container {
+    padding-top: 230px;
+    padding-bottom: 230px;
+    justify-content: center;
+  }
+}
+
+// NEWS
+
+@media all and (max-width: 1050px) {
+  .news .container {
+    margin: 0 20px 0px 20px;
+    .one-news-column {
+      width: 100%;
+    }
+  }
+}
+
+@media all and (max-width: 600px) {
+  .news .container {
+    padding: 50px 20px;
+  }
+}
+
+  
